# Mode-Analyzer

./: LICENSE  Main.py  README.md  README.txt  find_peaks.py  gui_mpl.py  main.py  matplotlibrc  pyproject.toml  requirements.txt
modeanalyzer/: __main__.py  find_peaks.py  gui_mpl.py  modeanalyzer.py
src/mode-analyzer/: README.md  dark.mlpstyle  find_peaks.py  fitplotstyle  gui_mpl.py  mode-analyzer.py
