[project]
name = "mode-analyzer"
version = "0.1.5"
authors = [
  { name="Vahid Ganjalizadeh", email="vganjali@ucsc.edu" },
]
description = "A GUI tool to analyze optical mode images."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.13.3",
    "scipy >= 1.0.0",
    "Pillow >= 5.0.0",
    "matplotlib >= 3.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "modeanalyzer/*", 
]
exclude = [
    "modeanalyzer/__pycache__"
]

[project.urls]
"Homepage" = "https://github.com/vganjali/mode-analyzer"
"Bug Tracker" = "https://github.com/vganjali/mode-analyzer/issues"